Enhance project for Vercel deployment: updated .gitignore, modified package.json for build scripts, improved README with deployment instructions, and adjusted API calls in App.tsx for environment handling.

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 node_modules/
 client/node_modules/
 server/node_modules/
+api/node_modules/
 
 # Production builds
 client/build/
 server/dist/
+api/dist/
 
 # Environment variables
 server/.env
@@ -96,3 +98,6 @@ temp/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Vercel
+.vercel
