--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "client": "cd client && npm start",
     "server": "cd server && npm run dev",
-    "build": "cd client && npm run build",
-    "install-all": "npm install && cd client && npm install && cd ../server && npm install"
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build",
+    "install-all": "npm install && cd client && npm install && cd ../server && npm install",
+    "vercel-build": "npm run build:client"
   },
   "keywords": ["react", "typescript", "nodemailer", "bulk-email"],
   "author": "",
